# freedv-backend

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
cmake/: BuildEbur128.cmake  BuildRADE.cmake  BuildRNNoise.cmake  BuildSamplerate.cmake
src/: CMakeLists.txt
src/os/: CMakeLists.txt  windows_interface.cpp
src/pipeline/: CMakeLists.txt  HRA_56_56.h  IPipelineStep.h  MinimalRealTimeHelper.cpp  MinimalRealTimeHelper.h  MinimalTxRxThread.cpp  MinimalTxRxThread.h  MuteStep.cpp  MuteStep.h  RADEReceiveStep.cpp  RADETransmitStep.cpp  RADETransmitStep.h  ResampleStep.cpp  ResampleStep.h  ldpc_decode.cpp  ldpc_decode.h  ldpc_encode.cpp  ldpc_encode.h  rade_text.cpp
src/pipeline/test/: MinimalTxRxThreadTest.cpp  RadeTextTest.cpp  RadeTextUnitTest.cpp  ldpc_decode.cpp  ldpc_encode.cpp
src/reporting/: CMakeLists.txt
src/util/: CMakeLists.txt  IRealtimeHelper.h  Semaphore.h  audio_spin_mutex.h  freedv_sanitizers.h  realtime_fp.h
